--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -17,7 +17,6 @@
       <%= message.content %>
       <!-- messagesテーブルのcontentカラムから、メッセージの内容を取得 -->
     </div>
-      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>  </div>
-</div> %>
+      <%= image_tag message.image.variant(resize: '500x500'), class: 'message-image' if message.image.attached? %>  
   </div>
 </div>
